--- a/src/GraphQL.OneOf/GraphQL.OneOf.csproj
+++ b/src/GraphQL.OneOf/GraphQL.OneOf.csproj
@@ -1,9 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
+        <TargetFrameworks>net6.0;net5.0;netcoreapp3.1;netstandard2.0;netstandard2.1</TargetFrameworks>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="GraphQL" Version="7.2.1" />
+      <PackageReference Include="OneOf" Version="3.0.223" />
+    </ItemGroup>
 
 </Project>
