--- a/src/GraphQL.AutoUnions.OneOf/GraphQL.AutoUnions.OneOf.csproj
+++ b/src/GraphQL.AutoUnions.OneOf/GraphQL.AutoUnions.OneOf.csproj
@@ -4,7 +4,7 @@
         <TargetFrameworks>net6.0;net5.0;netcoreapp3.1;netstandard2.0;netstandard2.1</TargetFrameworks>
         <AssemblyName>GraphQL.AutoUnions.OneOf</AssemblyName>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <Version>1.0.0-beta.0</Version>
+        <Version>1.0.0-beta.1</Version>
         <Title>GraphQL.AutoUnions.OneOf</Title>
         <Description>A library that adds support for auto schema with discriminated unions when using the OneOf library.</Description>
         <PackageProjectUrl>https://github.com/lolismatic/GraphQL.OneOf/tree/main/src/GraphQL.AutoUnions.OneOf</PackageProjectUrl>
@@ -17,12 +17,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\GraphQL.AutoUnions\GraphQL.AutoUnions.csproj"/>
-    </ItemGroup>
-
-    <ItemGroup>
-        <PackageReference Include="OneOf" Version="3.0.160"/>
-        <PackageReference Include="OneOf.SourceGenerator" Version="3.0.184"/>
+        <PackageReference Include="GraphQL.AutoUnions" Version="1.0.0-beta.0" />
+        <PackageReference Include="OneOf" Version="3.0.160" />
+        <PackageReference Include="OneOf.SourceGenerator" Version="3.0.184" />
     </ItemGroup>
 
     <ItemGroup>
@@ -31,7 +28,7 @@
             <PackagePath></PackagePath>
             <Link>assets\logo.64x64.png</Link>
         </None>
-        <None Include="docs\README.md" Pack="true" PackagePath="\"/>
+        <None Include="docs\README.md" Pack="true" PackagePath="\" />
         <None Update="docs\README.md">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
