--- a/.github/workflows/docfx.yml
+++ b/.github/workflows/docfx.yml
@@ -60,4 +60,5 @@ jobs:
           cp -R _site/* .
           git add .
           git commit -m "Update DocFX documentation"
-          git push origin gh-pages
+          git log -1 --pretty=format:'%s'
+          git push "https://${{ secrets.GH_PAT }}@github.com/${{ github.repository }}" gh-pages
