--- a/.github/workflows/docfx.yml
+++ b/.github/workflows/docfx.yml
@@ -35,6 +35,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.GH_PAT }}
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v1
@@ -61,4 +63,4 @@ jobs:
           git add .
           git commit -m "Update DocFX documentation"
           git log -1 --pretty=format:'%s'
-          git push "https://${{ secrets.GH_PAT }}@github.com/${{ github.repository }}" gh-pages
+          git push origin gh-pages
